tests/ui/diagnostic-not-implemented-into-bytes.msrv.stderr
error[E0277]: the trait bound `NotZerocopy: IntoBytes` is not satisfied
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/diagnostic-not-implemented-into-bytes.rs:16:24
   |
16 |     takes_into_bytes::<NotZerocopy>();
   |                        ^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_into_bytes`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/diagnostic-not-implemented-into-bytes.rs:19:24
   |
19 | fn takes_into_bytes<T: IntoBytes>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_into_bytes`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
